--- a/views/browser.hbs
+++ b/views/browser.hbs
@@ -103,20 +103,20 @@
                 <div class="file-actions">
                     <button onclick="event.stopPropagation(); renameItem('{{this.name}}')"
                         class="btn btn-sm btn-secondary" title="Rename">
-                        <svg class="icon icon-sm" viewBox="0 0 24 24">
+                        <svg class="icon icon-lg" viewBox="0 0 24 24">
                             <path d="M12 20h9"></path>
                             <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
                         </svg>
                     </button>
                     <button onclick="event.stopPropagation(); moveItem('{{this.name}}')"
                         class="btn btn-sm btn-secondary" title="Move">
-                        <svg class="icon icon-sm" viewBox="0 0 24 24">
+                        <svg class="icon icon-lg" viewBox="0 0 24 24">
                             <polyline points="9 18 15 12 9 6"></polyline>
                         </svg>
                     </button>
                     <button onclick="event.stopPropagation(); deleteItem('{{this.name}}')" class="btn btn-sm btn-danger"
                         title="Delete">
-                        <svg class="icon icon-sm" viewBox="0 0 24 24">
+                        <svg class="icon icon-lg" viewBox="0 0 24 24">
                             <polyline points="3 6 5 6 21 6"></polyline>
                             <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
                             </path>
